Update and rename README.md to README

--- a/README
+++ b/README
@@ -1,4 +1,6 @@
 # Basic-Java
+```java
+
 import java.util.Scanner;
 class Main
 {
@@ -27,3 +29,5 @@ class Main
 	   System.out.println(num + " is not a Prime Number");
    }
 }
+
+```
