--- a/README
+++ b/README
@@ -1,5 +1,6 @@
 # Basic-Java
-```
+//WRITE A JAVA PROGRAM TO CHECK WHETHER THE INPUT NUMBER IS PRIME OR NOT 
+
 import java.util.Scanner;
 class Main
 {
@@ -12,20 +13,7 @@ class Main
 	//capture the input in an integer
 	int num=scan.nextInt();
         scan.close();
-	for(int i=2;i<=num/2;i++)
-	{
-           temp=num%i;
-	   if(temp==0)
-	   {
-	      isPrime=false;
-	      break;
-	   }
-	}
-	//If isPrime is true then the number is prime else not
-	if(isPrime)
-	   System.out.println(num + " is a Prime Number");
-	else
-	   System.out.println(num + " is not a Prime Number");
+	
+	//WRITE YOU CODE LOGIC HERE
    }
 }
-```
